--- a/src/components/WeatherButton/style.css
+++ b/src/components/WeatherButton/style.css
@@ -1,6 +1,4 @@
-input {
-    margin: 10px 20px 30px 0px;
-
+button {
     padding: 15px;
 
     border-style: solid;
@@ -8,9 +6,9 @@ input {
     border-width: 1px;
     border-color: #6e7681;
 
-    background-color: #0d1117;
+    background-color: #010409;
 
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     color: #6e7681;
 }
